--- a/src/styles/AdminPage.css
+++ b/src/styles/AdminPage.css
@@ -6,14 +6,16 @@
 
 .admin-navbar {
     display: flex;
+    font-size: 1.13rem;
+    font-weight: 400;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: #333;
+    background:  #1f1f20;
     padding: 1rem;
 }
 
 .admin-nav-item {
-    color: white;
+    color: rgb(238, 236, 236);
     text-decoration: none;
     margin: 0.5rem 1rem;
 }
@@ -24,11 +26,13 @@
 
 .logout-button {
     background-color: #f44336;
+    font-size: 1.13rem;
+    font-weight: 400;
     color: white;
     border: none;
     padding: 0.5rem 1rem;
     cursor: pointer;
-    margin: 0.5rem 1rem;
+    margin: 1rem 1rem;
 }
 
 .logout-button:hover {
