--- a/src/styles/CreateClient.css
+++ b/src/styles/CreateClient.css
@@ -1,49 +1,62 @@
 .create-client-container {
-    max-width: 600px;
-    margin: auto;
-    padding: 20px;
-    background: #e3e6e8;
+    background-color: #acaab1;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 500px;
+    margin: 30px auto;
+    font-family: 'Arial', sans-serif;
+    position: relative;
 }
 
 .create-client-title {
-    text-align: center;
-    color: #333;
+    color: #181515;
     margin-bottom: 20px;
+    font-size: 1.6em;
+    text-align: center;
 }
 
 .create-client-form {
     display: flex;
     flex-direction: column;
+    background: #fff;
+    padding: 1rem;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .create-client-label {
-    font-size: 14px;
-    margin-bottom: 8px;
-    color: #555;
+    font-size: 1.1rem;
+    margin: 10px 0 5px;
+    font-weight: bold;
+    color: #0f0f0f;
 }
 
 .create-client-input {
+    width: 100%;
     padding: 10px;
-    margin-bottom: 16px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    margin-bottom: 15px;
+    background-color: #fff;
+    box-sizing: border-box;
 }
 
 .create-client-button {
-    padding: 12px;
-    background: #007bff;
+    font-size: 1rem;
+    background-color: #383737;
     color: #fff;
     border: none;
+    padding: 0.75rem;
     border-radius: 4px;
-    font-size: 16px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-weight: bold;
 }
 
 .create-client-button:hover {
-    background: #0056b3;
+    background-color: #2c2b2c; 
+    color: #fff;
 }
 
 @media (max-width: 768px) {
