--- a/src/styles/CreateUser.css
+++ b/src/styles/CreateUser.css
@@ -1,53 +1,54 @@
 #createUserContainer {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 2rem;
-    background: linear-gradient(135deg, #6a1b9a, #ab47bc);
+    background-color: #acaab1;
     border-radius: 8px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    border: 1px solid #ddd; 
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 500px;
+    margin: 30px auto;
+    font-family: 'Arial', sans-serif;
+    position: relative;
 }
 
 #createUserTitle {
-    font-size: 2rem;
-    color: #fff;
-    margin-bottom: 1rem;
+    color: #181515;
+    margin-bottom: 20px;
+    font-size: 1.6em;
     text-align: center;
-    font-weight: bold;
 }
 
 #createUserForm {
     display: flex;
     flex-direction: column;
     background: #fff;
-    padding: 2rem;
+    padding: 1rem;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .createUserLabel {
-    font-size: 1rem;
-    color: #333;
-    margin-bottom: 0.5rem;
+    font-size: 1.1rem;
+    margin: 10px 0 5px;
+    font-weight: bold;
+    color: #0f0f0f;
 }
 
 .createUserInput, .createUserSelect {
-    font-size: 1rem;
-    padding: 0.75rem;
-    margin-bottom: 1rem;
+    width: 100%;
+    padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    transition: border-color 0.3s ease;
+    border-radius: 6px;
+    margin-bottom: 15px;
+    background-color: #fff;
+    box-sizing: border-box;
 }
 
 .createUserInput:focus, .createUserSelect:focus {
-    border-color: #f65cd5;
-    outline: none;
+    background-color: #ddd8d8;
 }
 
 .createUserButton {
     font-size: 1rem;
-    background-color: #ab47bc;
+    background-color: #383737;
     color: #fff;
     border: none;
     padding: 0.75rem;
@@ -58,11 +59,11 @@
 }
 
 .createUserButton:hover {
-    background-color: #6a1b9a; 
+    background-color: #2c2b2c; 
     color: #fff;
 }
 
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
     #createUserContainer {
         padding: 1rem;
     }
@@ -120,4 +121,4 @@
         font-size: 1rem;
         padding: 0.75rem;
     }
-}
+} */
