--- a/src/styles/UpdateUser.css
+++ b/src/styles/UpdateUser.css
@@ -1,5 +1,5 @@
 .update-user-container {
-    background: #ece9e9; 
+    background-color: #acaab1;
     border-radius: 8px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -10,7 +10,7 @@
 }
 
 .update-user-title {
-    color: #333;
+    color: #181515;
     margin-bottom: 20px;
     font-size: 1.6em;
     text-align: center;
@@ -19,12 +19,17 @@
 .update-user-form {
     display: flex;
     flex-direction: column;
+    background: #fff;
+    padding: 1rem;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .update-user-label {
+    font-size: 1.1rem;
     margin: 10px 0 5px;
     font-weight: bold;
-    color: #666;
+    color: #0f0f0f;
 }
 
 .update-user-select, 
@@ -39,7 +44,7 @@
 }
 
 .update-user-select {
-    background-color: #fafafa;
+    background-color: #ddd8d8;
 }
 
 .update-user-input {
@@ -47,23 +52,26 @@
 }
 
 .update-user-button {
-    background: #28a745; 
+    font-size: 1rem;
+    background-color: #383737;
     color: #fff;
     border: none;
-    padding: 10px 20px;
-    border-radius: 6px;
+    padding: 0.75rem;
+    border-radius: 4px;
     cursor: pointer;
-    font-size: 1.1em;
-    transition: background 0.3s ease;
+    transition: background-color 0.3s ease;
+    font-weight: bold;
 }
 
 .update-user-button:hover {
-    background: #218838;
+    background-color: #2c2b2c;  
+    color: #fff;
 }
 
 .update-user-container select:focus, 
 .update-user-container input:focus {
-    border-color: #28a745;
+    background-color: #ffffff;
+    border-color: #141314;
     outline: none;
     box-shadow: 0 0 5px rgba(40, 167, 69, 0.3);
 }
